--- a/html/biblioteca2.html
+++ b/html/biblioteca2.html
@@ -35,7 +35,7 @@
                         <a class="nav-link active text-light" aria-current="page" href="../index.html"><strong>Inicio</strong></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link text-light" href="animaciones.html"></a>
+                        <a class="nav-link text-light" href="animaciones.html">Animaciones</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link text-light" href="transiciones.html">Transiciones</a>
