--- a/index.html
+++ b/index.html
@@ -47,12 +47,18 @@
                         <a class="nav-link text-light" href="html/biblioteca2.html">Biblioteca 2</a>
                     </li>
                 </ul>
+
+
                 <span class="navbar-text">
                 </span>
             </div>
         </div>
     </nav>
 
+
+    <div>
+        
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
