--- a/html/transiciones.html
+++ b/html/transiciones.html
@@ -7,7 +7,7 @@
     <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/transiciones.css">
 
 </head>
 <body class="pb-5">
@@ -53,6 +53,15 @@
         </div>
     </nav>
 
+    <br>
+    <br>
+    <div>
+        <article id="art1">1</article><br>
+        <article id="art2">2</article><br>
+        <article id="art3">3</article><br>
+        <article id="art4">4</article><br>
+        <article id="art5">5</article><br>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
