--- a/html/transiciones.html
+++ b/html/transiciones.html
@@ -55,13 +55,17 @@
 
     <br>
     <br>
-    <div>
-        <article id="art1">1</article><br>
-        <article id="art2">2</article><br>
-        <article id="art3">3</article><br>
-        <article id="art4">4</article><br>
-        <article id="art5">5</article><br>
+    <div class="container">
+        <article class="art1">1</article><br>
+        <article class="art2">2</article><br>
+        
     </div>
+
+   <br>
+   
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
