--- a/index.html
+++ b/index.html
@@ -54,10 +54,45 @@
             </div>
         </div>
     </nav>
-
-
-    <div>
+    <br>
+    <br>
+    <div class="container">
         
+            <h1>ANIMACIONES Y TRANSICIONES</h1>
+            <br>
+            <br>
+            <h4>Animaciones:</h4>
+            <br>
+            <p>
+                Las animaciones CSS son una herramienta poderosa que te permite añadir movimiento y dinamismo a tus páginas web. A diferencia de las animaciones tradicionales creadas con JavaScript o Flash, las animaciones CSS se implementan directamente en el código CSS, lo que las hace más ligeras, eficientes y fáciles de integrar.
+                <br>
+                <br>
+                Se veran algunos ejemplos de animaciones realizadas con CSS.
+            </p>
+            <br>
+            <br>
+            <h4>Transiciones</h4>
+            <br>
+            <p>
+                Son una herramienta fundamental para crear animaciones fluidas y sutiles en páginas web. A diferencia de las animaciones CSS, que definen una secuencia completa de fotogramas clave, las transiciones se encargan de suavizar el cambio entre dos estados de un elemento, como cuando se pasa el cursor sobre un botón o se hace clic en un enlace.
+                <br>
+                <br>
+                Se veran algunos ejemplos de transiciones realizadas con CSS.
+            </p>
+            <br>
+            <br>
+            <h4>Biblioteca Anymate Style</h4>
+            <br>
+            <p>
+                Animate.css es una biblioteca de animaciones CSS lista para usar que te permite agregar efectos visuales dinámicos a tus páginas web de manera sencilla y eficiente.
+                <br>
+                <br>
+                Se veran algunos ejemplos usando esta biblioteca.
+            </p>
+            <br>
+            <br>
+
+      
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
