--- a/html/biblioteca2.html
+++ b/html/biblioteca2.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/biblioteca2.css">
+    <link rel="stylesheet" href="../sass/transiciones.css">
 
 </head>
+
 <body class="pb-5">
-    
+
 
     <header class=" p-3 text-primary-emphasis" id="header">
         <div class="row">
             <div class="col-auto">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Logotipo_de_el_INTECAP.png" class="float-left" style="width: 150px; height: auto;" alt="">
-            </div>            
+                <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Logotipo_de_el_INTECAP.png"
+                    class="float-left" style="width: 150px; height: auto;" alt="">
+            </div>
         </div>
     </header>
 
@@ -32,7 +36,8 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-light" aria-current="page" href="../index.html"><strong>Inicio</strong></a>
+                        <a class="nav-link active text-light" aria-current="page"
+                            href="../index.html"><strong>Inicio</strong></a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link text-light" href="animaciones.html">Animaciones</a>
@@ -53,8 +58,136 @@
         </div>
     </nav>
 
+    <br>
+    <br>
+    <div class="container">
+        <div class="letter-image">
+            <div class="animated-mail">
+                <div class="back-fold"></div>
+                <div class="letter">
+                    <div class="letter-border"></div>
+                    <div class="letter-title"></div>
+                    <div class="letter-context"></div>
+                    <div class="letter-stamp">
+                        <div class="letter-stamp-inner"></div>
+                    </div>
+                </div>
+                <div class="top-fold"></div>
+                <div class="body"></div>
+                <div class="left-fold"></div>
+            </div>
+            <div class="shadow"></div>
+        </div>
+    </div>
+    <br>
+    <br>
+
+    <div class="planet">
+        <div class="r1"></div>
+        <div class="r2"></div>
+        <div class="r3"></div>
+        <div class="r4"></div>
+        <div class="r5"></div>
+        <div class="r6"></div>
+        <div class="r7"></div>
+        <div class="r8"></div>
+        <div class="shad"></div>
+    </div>
+    <div class="stars">
+        <div class="s1"></div>
+        <div class="s2"></div>
+        <div class="s3"></div>
+        <div class="s4"></div>
+        <div class="s5"></div>
+        <div class="s6"></div>
+    </div>
+    <div class="an">
+        <div class="tank"></div>
+        <div class="astro">
+
+            <div class="helmet">
+                <div class="glass">
+                    <div class="shine"></div>
+                </div>
+            </div>
+            <div class="dress">
+                <div class="c">
+                    <div class="btn1"></div>
+                    <div class="btn2"></div>
+                    <div class="btn3"></div>
+                    <div class="btn4"></div>
+                </div>
+            </div>
+            <div class="handl">
+                <div class="handl1">
+                    <div class="glovel">
+                        <div class="thumbl"></div>
+                        <div class="b2"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="handr">
+                <div class="handr1">
+                    <div class="glover">
+                        <div class="thumbr"></div>
+                        <div class="b1"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="legl">
+                <div class="bootl1">
+                    <div class="bootl2"></div>
+                </div>
+            </div>
+            <div class="legr">
+                <div class="bootr1">
+                    <div class="bootr2"></div>
+                </div>
+            </div>
+            <div class="pipe">
+                <div class="pipe2">
+                    <div class="pipe3"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="segundoElemento">
+        <h1>Animaciones</h1>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <center>
+        <div class="logo-holder">
+            <div class="bg"></div>
+            <div class="bar"></div>
+            <div class="bar fill1"></div>
+            <div class="bar fill2"></div>
+            <div class="bar fill3"></div>
+            <div class="bar fill4"></div>
+            <div class="bar fill1"></div>
+            <div class="bar fill5"></div>
+            <div class="bar fill6"></div>
+            <div class="bar"></div>
+          </div>
+
+    </center>
+   
+    
+    <br>
+    <br>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
