--- a/html/biblioteca2.html
+++ b/html/biblioteca2.html
@@ -152,9 +152,12 @@
         </div>
     </div>
     </div>
-    <div class="segundoElemento">
+    <!-- 
+<div class="segundoElemento">
         <h1>Animaciones</h1>
     </div>
+    -->
+    
     <br>
     <br>
     <br>
@@ -184,6 +187,24 @@
     
     <br>
     <br>
+    <!--animacion 3-->
+    <center>
+        <div class="loader"></div>
+    </center>
+    <br>
+    <br>
+    <br>
+    <!--animacion 4-->
+    <center>
+        <div class="pacman"></div>
+    </center>
+    <br>
+    <br>
+    <br>
+      <!--animacion 5-->
+      <center>
+        <div class="flechas"></div>
+    </center>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
